feat: update apple/orange dataset to 64x64, added a fully convolutionnal gan generator model (image as input)

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple GAN implementation"
+    "# Simple GANs implementations"
    ]
   },
   {
@@ -51,7 +51,8 @@
    "outputs": [],
    "source": [
     "# dataset = \"mnist\"\n",
-    "dataset = \"apple2orange\""
+    "# dataset = \"apple2orange64\"\n",
+    "dataset = \"orange2apple64\""
    ]
   },
   {
@@ -79,15 +80,15 @@
     "    sample_interval = 400  # interval between image samples\n",
     "    channels = 1  # grayscale\n",
     "    \n",
-    "elif dataset == \"apple2orange\": # TODO: Doesn't work it's not converging\n",
+    "elif dataset == \"apple2orange64\" or dataset == \"orange2apple64\":\n",
     "    n_epochs = 400  # number of epochs of training\n",
-    "    batch_size = 20  # size of the batches\n",
+    "    batch_size = 4  # size of the batches\n",
     "    lr = 0.0002  # adam: learning rate\n",
     "    b1 = 0.5  # adam: decay of first order momentum of gradient\n",
     "    b2 = 0.999  # adam: decay of first order momentum of gradient\n",
     "    n_cpu = 8  # number of cpu threads to use during batch generation\n",
     "    latent_dim = 300  # dimensionality of the latent space\n",
-    "    img_size = 28  # size of each image dimension\n",
+    "    img_size = 64  # size of each image dimension\n",
     "    sample_interval = 400  # interval between image samples\n",
     "    channels = 3  # rgb\n",
     "\n",
@@ -122,7 +123,8 @@
    "outputs": [],
    "source": [
     "# model = \"gan\"\n",
-    "model = \"dcgan\"\n",
+    "# model = \"dcgan\"\n",
+    "model = \"fdcgan\"\n",
     "\n",
     "if model == \"gan\":\n",
     "    from gan import Generator, Discriminator\n",
@@ -131,8 +133,14 @@
     "elif model == \"dcgan\":\n",
     "    from dcgan import Generator, Discriminator, weights_init_normal\n",
     "    image_progress_folder = \"images_dcgan_\" + dataset\n",
-    "    global img_size\n",
-    "    img_size = 32 # Filter is 4x4\n",
+    "    if dataset == \"mnist\":\n",
+    "        img_size = 32\n",
+    "\n",
+    "elif model == \"fdcgan\":\n",
+    "    from fdcgan import Generator, Discriminator, weights_init_normal\n",
+    "    image_progress_folder = \"images_fdcgan_\" + dataset\n",
+    "    if dataset not in [\"apple2orange64\", \"orange2apple64\"]:\n",
+    "        raise Exception(f\"Dataset {dataset} not compatible with fdcgan method\")\n",
     "\n",
     "else:\n",
     "    raise Exception(\"Unknown model\")"
@@ -199,7 +207,7 @@
     "    discriminator.cuda()\n",
     "    adversarial_loss.cuda()\n",
     "\n",
-    "if model == \"dcgan\":\n",
+    "if model == \"dcgan\" or model == \"fdcgan\":\n",
     "    # Initialize weights\n",
     "    generator.apply(weights_init_normal)\n",
     "    discriminator.apply(weights_init_normal)"
@@ -246,15 +254,54 @@
     "        shuffle=True,\n",
     "    )\n",
     "    \n",
-    "elif dataset == \"apple2orange\": # TODO: Doesn't work it's not converging\n",
+    "elif dataset == \"apple2orange64\": # TODO: Doesn't work it's not converging\n",
     "\n",
     "    import subprocess\n",
     "    command = \"bash ./datasets/download_cyclegan_dataset.sh\"\n",
     "    subprocess.run(command, shell=True)\n",
     "\n",
+    "    dataloader_input = torch.utils.data.DataLoader(\n",
+    "        datasets.ImageFolder(\n",
+    "            root=\"./datasets/apple2orange64/TrainA\", # apples\n",
+    "            transform=transforms.Compose(\n",
+    "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])]\n",
+    "            ),\n",
+    "        ),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True,\n",
+    "    )\n",
+    "\n",
     "    dataloader = torch.utils.data.DataLoader(\n",
     "        datasets.ImageFolder(\n",
-    "            root=\"./datasets/apple2orange/TrainA\", # apples\n",
+    "            root=\"./datasets/apple2orange64/TrainB\", # oranges\n",
+    "            transform=transforms.Compose(\n",
+    "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])]\n",
+    "            ),\n",
+    "        ),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True,\n",
+    "    )\n",
+    "\n",
+    "elif dataset == \"orange2apple64\":\n",
+    "\n",
+    "    import subprocess\n",
+    "    command = \"bash ./datasets/download_cyclegan_dataset.sh\"\n",
+    "    subprocess.run(command, shell=True)\n",
+    "\n",
+    "    dataloader_input = torch.utils.data.DataLoader(\n",
+    "        datasets.ImageFolder(\n",
+    "            root=\"./datasets/apple2orange64/TrainB\", # oranges\n",
+    "            transform=transforms.Compose(\n",
+    "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])]\n",
+    "            ),\n",
+    "        ),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True,\n",
+    "    )\n",
+    "\n",
+    "    dataloader = torch.utils.data.DataLoader(\n",
+    "        datasets.ImageFolder(\n",
+    "            root=\"./datasets/apple2orange64/TrainA\", # apples\n",
     "            transform=transforms.Compose(\n",
     "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])]\n",
     "            ),\n",
@@ -289,12 +336,19 @@
     "for epoch in range(n_epochs):\n",
     "    for i, (imgs, _) in enumerate(dataloader):\n",
     "\n",
+    "        if (imgs.shape[0] != batch_size):\n",
+    "            continue\n",
+    "\n",
     "        # Adversarial ground truths\n",
     "        valid = Variable(Tensor(imgs.shape[0], 1).fill_(1.0), requires_grad=False)\n",
     "        fake = Variable(Tensor(imgs.shape[0], 1).fill_(0.0), requires_grad=False)\n",
     "\n",
     "        # Configure input\n",
     "        real_imgs = Variable(imgs.type(Tensor))\n",
+    "        if model == \"fdcgan\":\n",
+    "            real_imgs_input =   Variable(next(iter(dataloader_input))[0].type(Tensor))\n",
+    "            if real_imgs_input.shape[0] != real_imgs.shape[0]:\n",
+    "                real_imgs_input = Variable(next(iter(dataloader_input))[0].type(Tensor))\n",
     "\n",
     "        # -----------------\n",
     "        #  Train Generator\n",
@@ -302,14 +356,20 @@
     "\n",
     "        optimizer_G.zero_grad()\n",
     "\n",
-    "        # Sample noise as generator input\n",
-    "        z = Variable(Tensor(np.random.normal(0, 1, (imgs.shape[0], latent_dim))))\n",
+    "        if model == \"gan\" or model == \"dcgan\":\n",
+    "            # Sample noise as generator input\n",
+    "            z = Variable(Tensor(np.random.normal(0, 1, (imgs.shape[0], latent_dim))))\n",
+    "        elif model == \"fdcgan\":\n",
+    "            # Get image as generator input\n",
+    "            z = real_imgs_input\n",
+    "\n",
     "\n",
     "        # Generate a batch of images\n",
     "        gen_imgs = generator(z)\n",
     "\n",
     "        # Loss measures generator's ability to fool the discriminator\n",
-    "        g_loss = adversarial_loss(discriminator(gen_imgs), valid)\n",
+    "        res = discriminator(gen_imgs)\n",
+    "        g_loss = adversarial_loss(res, valid)\n",
     "\n",
     "        g_loss.backward()\n",
     "        optimizer_G.step()\n",
@@ -335,7 +395,12 @@
     "\n",
     "        batches_done = epoch * len(dataloader) + i\n",
     "        if batches_done % sample_interval == 0:\n",
-    "            save_image(gen_imgs.data[:25], image_progress_folder + \"/%d.png\" % batches_done, nrow=5, normalize=True)"
+    "            if model == \"gan\" or model == \"dcgan\":\n",
+    "                save_image(gen_imgs.data[:batch_size], image_progress_folder + \"/%d.png\" % batches_done, nrow=5, normalize=True)\n",
+    "            elif model == \"fdcgan\":\n",
+    "                save_image(real_imgs_input.data[:batch_size], image_progress_folder + \"/%d_originals.png\" % batches_done, nrow=5, normalize=True)\n",
+    "                save_image(gen_imgs.data[:batch_size], image_progress_folder + \"/%d_fakes.png\" % batches_done, nrow=5, normalize=True)\n",
+    "                "
    ]
   }
  ],
