fix: clean and reorganise notebooks

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -111,22 +111,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_epoch = 0 # epoch to start training from\n",
-    "n_epochs = 200  # number of epochs of training\n",
-    "decay_epoch=100 # epoch from which to start lr decay\n",
-    "batch_size = 64  # size of the batches\n",
-    "n_cpu=8 # number of cpu threads to use during batch generation\n",
-    "lr = 0.0002  # adam: learning rate\n",
-    "b1 = 0.5  # adam: decay of first order momentum of gradient\n",
-    "b2 = 0.999  # adam: decay of first order momentum of gradient\n",
-    "n_cpu = 8  # number of cpu threads to use during batch generation\n",
-    "latent_dim = 100  # dimensionality of the latent space\n",
-    "img_size = 28  # size of each image dimension\n",
-    "sample_interval = 200  # interval between image samples\n",
-    "channels = 1  # grayscale\n",
-    "checkpoint_interval = 1 # interval between saving model checkpoints\n",
-    "lambda_id = 5.0 # identity loss weight\n",
-    "lambda_cyc = 10.0 # cycle loss weight\n",
+    "start_epoch = 17         # epoch to start training from\n",
+    "n_epochs = 200          # number of epochs of training\n",
+    "decay_epoch=100         # epoch from which to start lr decay\n",
+    "n_cpu=8                 # number of cpu threads to use during batch generation\n",
+    "lr = 0.0002             # adam: learning rate\n",
+    "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
+    "b2 = 0.999              # adam: decay of first order momentum of gradient\n",
+    "n_cpu = 8               # number of cpu threads to use during batch generation\n",
+    "sample_interval = 200   # interval between image samples\n",
+    "checkpoint_interval = 1 # interval between batches for saving model checkpoints\n",
+    "lambda_id = 5.0         # identity loss weight\n",
+    "lambda_cyc = 10.0       # cycle loss weight\n",
     "if model == \"fdcgan\":\n",
     "    lambda_id = 1.0 \n",
     "    lambda_cyc = 2.0 "
@@ -146,10 +142,9 @@
    "outputs": [],
    "source": [
     "if dataset == \"apple2orange64\":\n",
-    "    batch_size = 4  # size of the batches\n",
-    "    img_size = 64  # size of each image dimension\n",
-    "    latent_dim = 300  # dimensionality of the latent space\n",
-    "    channels = 3  # rgb\n",
+    "    batch_size = 4      # size of the batches\n",
+    "    img_size = 64       # size of each image dimension\n",
+    "    channels = 3        # rgb\n",
     "    \n",
     "else:\n",
     "    raise Exception(\"Unknown dataset\")\n",
@@ -161,7 +156,6 @@
     "    \"b1\": b1,\n",
     "    \"b2\": b2,\n",
     "    \"n_cpu\": n_cpu,\n",
-    "    \"latent_dim\": latent_dim,\n",
     "    \"img_size\": img_size,\n",
     "    \"channels\": channels,\n",
     "    \"sample_interval\": sample_interval\n",
@@ -235,53 +229,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utils"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ReplayBuffer:\n",
-    "    def __init__(self, max_size=50):\n",
-    "        assert max_size > 0, \"Empty buffer or trying to create a black hole. Be careful.\"\n",
-    "        self.max_size = max_size\n",
-    "        self.data = []\n",
-    "\n",
-    "    def push_and_pop(self, data):\n",
-    "        to_return = []\n",
-    "        for element in data.data:\n",
-    "            element = torch.unsqueeze(element, 0)\n",
-    "            if len(self.data) < self.max_size:\n",
-    "                self.data.append(element)\n",
-    "                to_return.append(element)\n",
-    "            else:\n",
-    "                if random.uniform(0, 1) > 0.5:\n",
-    "                    i = random.randint(0, self.max_size - 1)\n",
-    "                    to_return.append(self.data[i].clone())\n",
-    "                    self.data[i] = element\n",
-    "                else:\n",
-    "                    to_return.append(element)\n",
-    "        return Variable(torch.cat(to_return))\n",
-    "\n",
-    "\n",
-    "class LambdaLR:\n",
-    "    def __init__(self, n_epochs, offset, decay_start_epoch):\n",
-    "        assert (n_epochs - decay_start_epoch) > 0, \"Decay must start before the training session ends!\"\n",
-    "        self.n_epochs = n_epochs\n",
-    "        self.offset = offset\n",
-    "        self.decay_start_epoch = decay_start_epoch\n",
-    "\n",
-    "    def step(self, epoch):\n",
-    "        return 1.0 - max(0, epoch + self.offset - self.decay_start_epoch) / (self.n_epochs - self.decay_start_epoch)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Initialising Models"
    ]
   },
@@ -324,10 +271,10 @@
     "\n",
     "if start_epoch != 0:\n",
     "    # Load pretrained models\n",
-    "    G_AB.load_state_dict(torch.load(\"saved_models/%s/%s/G_AB_%d.pth\" % (model, dataset, start_epoch)))\n",
-    "    G_BA.load_state_dict(torch.load(\"saved_models/%s/%s/G_BA_%d.pth\" % (model, dataset, start_epoch)))\n",
-    "    D_A.load_state_dict(torch.load(\"saved_models/%s/%s/D_A_%d.pth\" % (model, dataset, start_epoch)))\n",
-    "    D_B.load_state_dict(torch.load(\"saved_models/%s/%s/D_B_%d.pth\" % (model, dataset, start_epoch)))\n",
+    "    G_AB.load_state_dict(torch.load(\"saved_models/cycle-gan/%s/%s/G_AB_%d.pth\" % (model, dataset, start_epoch)))\n",
+    "    G_BA.load_state_dict(torch.load(\"saved_models/cycle-gan/%s/%s/G_BA_%d.pth\" % (model, dataset, start_epoch)))\n",
+    "    D_A.load_state_dict(torch.load(\"saved_models/cycle-gan/%s/%s/D_A_%d.pth\" % (model, dataset, start_epoch)))\n",
+    "    D_B.load_state_dict(torch.load(\"saved_models/cycle-gan/%s/%s/D_B_%d.pth\" % (model, dataset, start_epoch)))\n",
     "else:\n",
     "    # Initialize weights\n",
     "    if model == \"dcgan\" or model == \"fdcgan\" or model == \"resnet\":\n",
@@ -381,12 +328,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Buffers of previously generated samples:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Buffers of previously generated samples\n",
+    "class ReplayBuffer:\n",
+    "    def __init__(self, max_size=50):\n",
+    "        assert max_size > 0, \"Empty buffer or trying to create a black hole. Be careful.\"\n",
+    "        self.max_size = max_size\n",
+    "        self.data = []\n",
+    "\n",
+    "    def push_and_pop(self, data):\n",
+    "        to_return = []\n",
+    "        for element in data.data:\n",
+    "            element = torch.unsqueeze(element, 0)\n",
+    "            if len(self.data) < self.max_size:\n",
+    "                self.data.append(element)\n",
+    "                to_return.append(element)\n",
+    "            else:\n",
+    "                if random.uniform(0, 1) > 0.5:\n",
+    "                    i = random.randint(0, self.max_size - 1)\n",
+    "                    to_return.append(self.data[i].clone())\n",
+    "                    self.data[i] = element\n",
+    "                else:\n",
+    "                    to_return.append(element)\n",
+    "        return Variable(torch.cat(to_return))\n",
+    "        \n",
     "fake_A_buffer = ReplayBuffer()\n",
     "fake_B_buffer = ReplayBuffer()"
    ]
@@ -452,29 +427,20 @@
     "    command = \"bash ./datasets/download_cyclegan_dataset.sh\"\n",
     "    subprocess.run(command, shell=True)\n",
     "\n",
-    "    if model == \"gan\" or model == \"dcgan\":\n",
-    "        dataloader = torch.utils.data.DataLoader(\n",
-    "            ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"train\"),\n",
-    "            batch_size=batch_size,\n",
-    "            shuffle=True,\n",
-    "            # num_workers=1,\n",
-    "        )\n",
+    "    dataloader = torch.utils.data.DataLoader(\n",
+    "        ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"train\"),\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True,\n",
+    "        num_workers=n_cpu,\n",
+    "    )\n",
     "\n",
-    "    else:\n",
-    "        dataloader = torch.utils.data.DataLoader(\n",
-    "            ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"train\"),\n",
-    "            batch_size=batch_size,\n",
-    "            shuffle=True,\n",
-    "            # num_workers=1,\n",
-    "        )\n",
-    "    \n",
-    "        # Test data loader\n",
-    "        val_dataloader = DataLoader(\n",
-    "            ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"validation\"),\n",
-    "            batch_size=5,\n",
-    "            shuffle=True,\n",
-    "            # num_workers=1,\n",
-    "        )\n",
+    "    # Test data loader\n",
+    "    val_dataloader = DataLoader(\n",
+    "        ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"validation\"),\n",
+    "        batch_size=5,\n",
+    "        shuffle=True,\n",
+    "        num_workers=1,\n",
+    "    )\n",
     "\n",
     "def sample_images(batches_done):\n",
     "    \"\"\"Saves a generated sample from the test set\"\"\"\n",
@@ -492,6 +458,7 @@
     "    fake_B = make_grid(fake_B, nrow=5, normalize=True)\n",
     "    # Arange images along y-axis\n",
     "    image_grid = torch.cat((real_A, fake_B, real_B, fake_A), 1)\n",
+    "    print(\"saving to \", batches_done)\n",
     "    save_image(image_grid, \"images/cycle-gan/%s/%s/%s.png\" % (model, dataset, batches_done), normalize=False)\n"
    ]
   },
