--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -125,20 +125,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_epoch = 0 # epoch to start training from\n",
-    "n_epochs = 200  # number of epochs of training\n",
-    "decay_epoch=100 # epoch from which to start lr decay\n",
-    "batch_size = 64  # size of the batches\n",
-    "n_cpu=8 # number of cpu threads to use during batch generation\n",
-    "lr = 0.0002  # adam: learning rate\n",
-    "b1 = 0.5  # adam: decay of first order momentum of gradient\n",
-    "b2 = 0.999  # adam: decay of first order momentum of gradient\n",
-    "n_cpu = 8  # number of cpu threads to use during batch generation\n",
-    "latent_dim = 100  # dimensionality of the latent space\n",
-    "img_size = 28  # size of each image dimension\n",
-    "sample_interval = 400  # interval between image samples\n",
-    "channels = 1  # grayscale\n",
-    "checkpoint_interval = 1 # interval between saving model checkpoints"
+    "start_epoch = 0         # epoch to start training from\n",
+    "n_epochs = 200          # number of epochs of training\n",
+    "decay_epoch = 100       # epoch from which to start lr decay\n",
+    "n_cpu = 8               # number of cpu threads to use during batch generation\n",
+    "lr = 0.0002             # adam: learning rate\n",
+    "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
+    "b2 = 0.999              # adam: decay of first order momentum of gradient\n",
+    "sample_interval = 400   # interval between image samples\n",
+    "checkpoint_interval = 1 # interval between batches for saving model checkpoints"
    ]
   },
   {
@@ -155,16 +150,16 @@
    "outputs": [],
    "source": [
     "if dataset == \"mnist\":\n",
-    "    batch_size = 64  # size of the batches\n",
-    "    img_size = 28  # size of each image dimension\n",
-    "    latent_dim = 100  # dimensionality of the latent space\n",
-    "    channels = 1  # grayscale\n",
+    "    batch_size = 64     # size of the batches\n",
+    "    img_size = 28       # size of each image dimension\n",
+    "    latent_dim = 100    # dimensionality of the latent space\n",
+    "    channels = 1        # grayscale\n",
     "    \n",
     "elif dataset == \"apple2orange64\" or dataset == \"orange2apple64\":\n",
-    "    batch_size = 4  # size of the batches\n",
-    "    img_size = 64  # size of each image dimension\n",
-    "    latent_dim = 300  # dimensionality of the latent space\n",
-    "    channels = 3  # rgb\n",
+    "    batch_size = 4      # size of the batches\n",
+    "    img_size = 64       # size of each image dimension\n",
+    "    latent_dim = 300    # dimensionality of the latent space\n",
+    "    channels = 3        # rgb\n",
     "\n",
     "else:\n",
     "    raise Exception(\"Unknown dataset\")\n",
@@ -414,6 +409,7 @@
     "        ),\n",
     "        batch_size=batch_size,\n",
     "        shuffle=True,\n",
+    "        num_workers=n_cpu,\n",
     "    )\n",
     "\n",
     "if dataset == \"apple2orange64\":\n",
@@ -434,7 +430,7 @@
     "        ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"train\"),\n",
     "        batch_size=batch_size,\n",
     "        shuffle=True,\n",
-    "        # num_workers=1,\n",
+    "        num_workers=n_cpu,\n",
     "    )\n",
     "\n",
     "    # Test data loader\n",
@@ -442,7 +438,7 @@
     "        ImageDataset(\"./datasets/apple2orange64\", transforms_=transforms_, unaligned=True, mode=\"validation\"),\n",
     "        batch_size=5,\n",
     "        shuffle=True,\n",
-    "        # num_workers=1,\n",
+    "        num_workers=1,\n",
     "    )\n",
     "\n",
     "def sample_images(batches_done, my_class_A):\n",
