fix: mnist training loop

--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -531,9 +531,9 @@
     "            loss_GAN = adversarial_loss(discriminator(gen_imgs), valid)\n",
     "\n",
     "            # Total loss\n",
-    "            loss_G = loss_GAN + lambda_id * loss_identity\n",
+    "            g_loss = loss_GAN + lambda_id * loss_identity\n",
     "\n",
-    "            loss_G.backward()\n",
+    "            g_loss.backward()\n",
     "            optimizer_G.step()\n",
     "\n",
     "            # ---------------------\n",
