fix: mnist training loop used identity

--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -126,8 +126,8 @@
    "outputs": [],
    "source": [
     "start_epoch = 0         # epoch to start training from\n",
-    "n_epochs = 200          # number of epochs of training\n",
-    "decay_epoch = 100       # epoch from which to start lr decay\n",
+    "n_epochs = 100          # number of epochs of training\n",
+    "decay_epoch = 50       # epoch from which to start lr decay\n",
     "n_cpu = 8               # number of cpu threads to use during batch generation\n",
     "lr = 0.0002             # adam: learning rate\n",
     "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
@@ -526,12 +526,7 @@
     "            gen_imgs = generator(z)\n",
     "\n",
     "            # Loss measures generator's ability to fool the discriminator\n",
-    "            loss_identity = identity_loss(gen_imgs, real_imgs)\n",
-    "\n",
-    "            loss_GAN = adversarial_loss(discriminator(gen_imgs), valid)\n",
-    "\n",
-    "            # Total loss\n",
-    "            g_loss = loss_GAN + lambda_id * loss_identity\n",
+    "            g_loss = adversarial_loss(discriminator(gen_imgs), valid)\n",
     "\n",
     "            g_loss.backward()\n",
     "            optimizer_G.step()\n",
