feat: clean models files, use some discriminator for all models

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -175,11 +175,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
+    "\n",
     "if model == \"fdcgan\" or model == \"resnet\":\n",
     "    if model == \"fdcgan\":\n",
-    "        from fdcgan import Generator, Discriminator, weights_init_normal\n",
+    "        from fdcgan import Generator, weights_init_normal\n",
     "    elif model == \"resnet\":\n",
-    "        from resnet import Generator, Discriminator, weights_init_normal\n",
+    "        from resnet import Generator, weights_init_normal\n",
     "        n_residual_blocks = 9\n",
     "\n",
     "else:\n",
@@ -240,11 +242,7 @@
    "source": [
     "# -- Loss functions -- #\n",
     "\n",
-    "if model == \"fdcgan\":\n",
-    "    adversarial_loss = torch.nn.BCELoss()\n",
-    "elif model == \"resnet\":\n",
-    "    adversarial_loss = torch.nn.MSELoss()\n",
-    "\n",
+    "adversarial_loss = torch.nn.MSELoss()\n",
     "identity_loss = torch.nn.L1Loss()\n",
     "criterion_cycle = torch.nn.L1Loss()\n",
     "\n",
