--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -37,12 +37,12 @@
     "# -- Takes noise vectors as input -- #\n",
     "\n",
     "# model = \"gan\"\n",
-    "# model = \"dcgan\"\n",
+    "model = \"dcgan\"\n",
     "\n",
     "# -- Takes images as input -- #\n",
     "\n",
     "# model = \"fdcgan\"\n",
-    "model = \"resnet\""
+    "# model = \"resnet\""
    ]
   },
   {
@@ -64,8 +64,8 @@
     "\n",
     "# -- Adapted to both noise vectors and images input -- #\n",
     "\n",
-    "# dataset = \"apple2orange64\"\n",
-    "dataset = \"orange2apple64\""
+    "dataset = \"apple2orange64\"\n",
+    "# dataset = \"orange2apple64\""
    ]
   },
   {
@@ -127,7 +127,7 @@
    "source": [
     "start_epoch = 0         # epoch to start training from\n",
     "n_epochs = 100          # number of epochs of training\n",
-    "decay_epoch = 50       # epoch from which to start lr decay\n",
+    "decay_epoch = 50        # epoch from which to start lr decay\n",
     "n_cpu = 8               # number of cpu threads to use during batch generation\n",
     "lr = 0.0002             # adam: learning rate\n",
     "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
@@ -151,7 +151,7 @@
    "source": [
     "if dataset == \"mnist\":\n",
     "    batch_size = 64     # size of the batches\n",
-    "    img_size = 28       # size of each image dimension\n",
+    "    img_size = 64       # size of each image dimension\n",
     "    latent_dim = 100    # dimensionality of the latent space\n",
     "    channels = 1        # grayscale\n",
     "    \n",
@@ -191,22 +191,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from discriminator import Discriminator # Discriminator similar to the one in the original paper, uses MSE loss\n",
+    "\n",
     "if model == \"gan\":\n",
-    "    from gan import Generator, Discriminator\n",
+    "    from gan import Generator\n",
     "    \n",
     "elif model == \"dcgan\":\n",
-    "    from dcgan import Generator, Discriminator, weights_init_normal\n",
-    "    if dataset == \"mnist\":\n",
-    "        img_size = 32\n",
+    "    from dcgan import Generator, weights_init_normal\n",
     "\n",
     "elif model == \"fdcgan\" or model == \"resnet\":\n",
     "    lambda_id = 5.0\n",
     "    if dataset not in [\"apple2orange64\", \"orange2apple64\"]:\n",
     "        raise Exception(f\"Dataset {dataset} has no input image for the generator\")\n",
     "    if model == \"fdcgan\":\n",
-    "        from fdcgan import Generator, Discriminator, weights_init_normal\n",
+    "        from fdcgan import Generator, weights_init_normal\n",
     "    elif model == \"resnet\":\n",
-    "        from resnet import Generator, Discriminator, weights_init_normal\n",
+    "        from resnet import Generator, weights_init_normal\n",
     "        n_residual_blocks = 9\n",
     "\n",
     "else:\n",
@@ -267,12 +267,8 @@
    "source": [
     "# -- Loss functions -- #\n",
     "\n",
-    "if model == \"gan\" or model == \"dcgan\" or model == \"fdcgan\":\n",
-    "    adversarial_loss = torch.nn.BCELoss()\n",
-    "elif model == \"resnet\":\n",
-    "    adversarial_loss = torch.nn.MSELoss()\n",
-    "\n",
-    "identity_loss = torch.nn.L1Loss()\n",
+    "adversarial_loss = torch.nn.MSELoss() \n",
+    "identity_loss = torch.nn.L1Loss() # for fdcgan and resnet only\n",
     "\n",
     "# -- Initialize generator and discriminator -- #\n",
     "\n",
@@ -404,7 +400,7 @@
     "            train=True,\n",
     "            download=True,\n",
     "            transform=transforms.Compose(\n",
-    "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5])]\n",
+    "                [transforms.Resize(img_size), transforms.ToTensor(), transforms.Normalize([0.5], [0.5]), transforms.Resize(img_size)]\n",
     "            ),\n",
     "        ),\n",
     "        batch_size=batch_size,\n",
@@ -502,16 +498,16 @@
     "    prev_time = time.time()\n",
     "    for epoch in range(n_epochs):\n",
     "        for i, (imgs, _) in enumerate(dataloader):\n",
-    "\n",
+    "            \n",
     "            if (imgs.shape[0] != batch_size):\n",
     "                continue\n",
     "\n",
-    "            # Adversarial ground truths\n",
-    "            valid = Variable(Tensor(imgs.shape[0], 1).fill_(1.0), requires_grad=False)\n",
-    "            fake = Variable(Tensor(imgs.shape[0], 1).fill_(0.0), requires_grad=False)\n",
-    "\n",
     "            # Configure input\n",
     "            real_imgs = Variable(imgs.type(Tensor))\n",
+    "\n",
+    "            # Adversarial ground truths\n",
+    "            valid = Variable(Tensor(np.ones((real_imgs.size(0), *discriminator.output_shape))), requires_grad=False)\n",
+    "            fake = Variable(Tensor(np.zeros((real_imgs.size(0), *discriminator.output_shape))), requires_grad=False)\n",
     "\n",
     "            # -----------------\n",
     "            #  Train Generator\n",
@@ -520,11 +516,11 @@
     "            optimizer_G.zero_grad()\n",
     "\n",
     "            # Sample noise as generator input\n",
-    "            z = Variable(Tensor(np.random.normal(0, 1, (imgs.shape[0], latent_dim))))\n",
+    "            z = Variable(Tensor(np.random.normal(0, 1, (real_imgs.shape[0], latent_dim))))\n",
     "\n",
     "            # Generate a batch of images\n",
     "            gen_imgs = generator(z)\n",
-    "\n",
+    "            \n",
     "            # Loss measures generator's ability to fool the discriminator\n",
     "            g_loss = adversarial_loss(discriminator(gen_imgs), valid)\n",
     "\n",
@@ -548,26 +544,26 @@
     "            # --------------\n",
     "            #  Log Progress\n",
     "            # --------------\n",
-    "\n",
+    "            \n",
     "            # Determine approximate time left\n",
     "            batches_done = epoch * len(dataloader) + i\n",
     "            batches_left = n_epochs * len(dataloader) - batches_done\n",
     "            time_left = datetime.timedelta(seconds=batches_left * (time.time() - prev_time))\n",
     "            prev_time = time.time()\n",
-    "            \n",
-    "            # Print log\n",
+    "\n",
     "            sys.stdout.write(\n",
     "                \"\\r[Epoch %d/%d] [Batch %d/%d] [D loss: %f] [G loss: %f] ETA: %s\"\n",
     "                % (epoch, n_epochs, i, len(dataloader), d_loss.item(), g_loss.item(), time_left))\n",
     "\n",
     "            batches_done = epoch * len(dataloader) + i\n",
     "            if batches_done % sample_interval == 0:\n",
-    "                save_image(gen_imgs.data[:5], image_progress_folder + \"/%d.png\" % batches_done, nrow=5, normalize=True)\n",
-    "            \n",
+    "                save_image(gen_imgs.data[:batch_size], image_progress_folder + \"/%d.png\" % batches_done, nrow=5, normalize=True)\n",
+    "        \n",
     "        if checkpoint_interval != -1 and epoch % checkpoint_interval == 0:\n",
     "            # Save model checkpoints\n",
     "            torch.save(generator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
-    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))"
+    "            torch.save(discriminator.state_dict(), \"saved_models/%s/%s/generator_%d.pth\" % (model, dataset, epoch))\n",
+    "                    "
    ]
   },
   {
@@ -587,17 +583,16 @@
     "    prev_time = time.time()\n",
     "    for epoch in range(start_epoch, n_epochs):\n",
     "        for i, batch in enumerate(dataloader):\n",
+    "\n",
     "            # Set model input\n",
-    "\n",
-    "            if dataset == \"orange2apple64\" or dataset == \"apple2orange64\":\n",
-    "                real_imgs = Variable(batch[my_class_B].type(Tensor))\n",
-    "\n",
-    "                if (real_imgs.shape[0] != batch_size):\n",
-    "                    continue\n",
+    "            real_imgs = Variable(batch[my_class_B].type(Tensor))\n",
+    "            \n",
+    "            if (real_imgs.shape[0] != batch_size):\n",
+    "                continue\n",
     "\n",
     "            # Adversarial ground truths\n",
-    "            valid = Variable(Tensor(np.ones((real_imgs.size(0), 1))), requires_grad=False)\n",
-    "            fake = Variable(Tensor(np.zeros((real_imgs.size(0), 1))), requires_grad=False)\n",
+    "            valid = Variable(Tensor(np.ones((real_imgs.size(0), *discriminator.output_shape))), requires_grad=False)\n",
+    "            fake = Variable(Tensor(np.zeros((real_imgs.size(0), *discriminator.output_shape))), requires_grad=False)\n",
     "\n",
     "            # -----------------\n",
     "            #  Train Generator\n",
@@ -611,16 +606,10 @@
     "            # Generate a batch of images\n",
     "            gen_imgs = generator(z)\n",
     "            \n",
-    "            # Identity loss, Generator should be identity if real image is fed\n",
-    "            loss_identity = identity_loss(generator(real_imgs), real_imgs) \n",
-    "\n",
     "            # Loss measures generator's ability to fool the discriminator\n",
-    "            loss_GAN = adversarial_loss(discriminator(gen_imgs), valid)\n",
+    "            g_loss = adversarial_loss(discriminator(gen_imgs), valid)\n",
     "\n",
-    "            # Total loss\n",
-    "            loss_G = loss_GAN + lambda_id * loss_identity\n",
-    "\n",
-    "            loss_G.backward()\n",
+    "            g_loss.backward()\n",
     "            optimizer_G.step()\n",
     "\n",
     "            # ---------------------\n",
@@ -704,7 +693,7 @@
     "            optimizer_G.zero_grad()\n",
     "\n",
     "            # Identity loss\n",
-    "            loss_identity = identity_loss(generator(real_B), real_B) # Should't modify real_B\n",
+    "            loss_identity = identity_loss(generator(real_B), real_B) # G should't modify real_B\n",
     "\n",
     "            # GAN loss\n",
     "            fake_B = generator(real_A)\n",
