fix: don't use identity for GAN, adapt resnet to small images

--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = \"fdcgan\"\n",
-    "# model = \"resnet\""
+    "# model = \"fdcgan\"\n",
+    "model = \"resnet\""
    ]
   },
   {
@@ -69,7 +69,6 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "import math\n",
     "import itertools\n",
     "import datetime\n",
     "import time\n",
@@ -113,7 +112,7 @@
    "source": [
     "start_epoch = 0         # epoch to start training from\n",
     "n_epochs = 200          # number of epochs of training\n",
-    "decay_epoch=100         # epoch from which to start lr decay\n",
+    "decay_epoch= 100         # epoch from which to start lr decay\n",
     "n_cpu=8                 # number of cpu threads to use during batch generation\n",
     "lr = 0.0002             # adam: learning rate\n",
     "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
