--- a/GANs.ipynb
+++ b/GANs.ipynb
@@ -37,11 +37,11 @@
     "# -- Takes noise vectors as input -- #\n",
     "\n",
     "# model = \"gan\"\n",
-    "model = \"dcgan\"\n",
+    "# model = \"dcgan\"\n",
     "\n",
     "# -- Takes images as input -- #\n",
     "\n",
-    "# model = \"fdcgan\"\n",
+    "model = \"fdcgan\"\n",
     "# model = \"resnet\""
    ]
   },
@@ -83,8 +83,6 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "import math\n",
-    "import itertools\n",
     "import datetime\n",
     "import time\n",
     "import glob\n",
@@ -126,8 +124,8 @@
    "outputs": [],
    "source": [
     "start_epoch = 0         # epoch to start training from\n",
-    "n_epochs = 100          # number of epochs of training\n",
-    "decay_epoch = 50        # epoch from which to start lr decay\n",
+    "n_epochs = 200          # number of epochs of training\n",
+    "decay_epoch = 100        # epoch from which to start lr decay\n",
     "n_cpu = 8               # number of cpu threads to use during batch generation\n",
     "lr = 0.0002             # adam: learning rate\n",
     "b1 = 0.5                # adam: decay of first order momentum of gradient\n",
@@ -268,7 +266,6 @@
     "# -- Loss functions -- #\n",
     "\n",
     "adversarial_loss = torch.nn.MSELoss() \n",
-    "identity_loss = torch.nn.L1Loss() # for fdcgan and resnet only\n",
     "\n",
     "# -- Initialize generator and discriminator -- #\n",
     "\n",
@@ -285,7 +282,6 @@
     "    generator.cuda()\n",
     "    discriminator.cuda()\n",
     "    adversarial_loss.cuda()\n",
-    "    identity_loss.cuda()\n",
     "\n",
     "if start_epoch != 0:\n",
     "    # Load pretrained models\n",
@@ -692,16 +688,9 @@
     "\n",
     "            optimizer_G.zero_grad()\n",
     "\n",
-    "            # Identity loss\n",
-    "            loss_identity = identity_loss(generator(real_B), real_B) # G should't modify real_B\n",
-    "\n",
     "            # GAN loss\n",
     "            fake_B = generator(real_A)\n",
-    "            loss_GAN = adversarial_loss(discriminator(fake_B), valid)\n",
-    "\n",
-    "\n",
-    "            # Total loss\n",
-    "            loss_G = loss_GAN + lambda_id * loss_identity\n",
+    "            loss_G = adversarial_loss(discriminator(fake_B), valid)\n",
     "\n",
     "            loss_G.backward()\n",
     "            optimizer_G.step()\n",
@@ -734,7 +723,7 @@
     "\n",
     "            # Print log\n",
     "            sys.stdout.write(\n",
-    "                \"\\r[Epoch %d/%d] [Batch %d/%d] [D loss: %f] [G loss: %f, adv: %f, identity: %f] ETA: %s\"\n",
+    "                \"\\r[Epoch %d/%d] [Batch %d/%d] [D loss: %f] [G loss: %f] ETA: %s\"\n",
     "                % (\n",
     "                    epoch,\n",
     "                    n_epochs,\n",
@@ -742,8 +731,6 @@
     "                    len(dataloader),\n",
     "                    loss_D.item(),\n",
     "                    loss_G.item(),\n",
-    "                    loss_GAN.item(),\n",
-    "                    loss_identity.item(),\n",
     "                    time_left,\n",
     "                )\n",
     "            )\n",
